add storybook for components later

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,18 +1,28 @@
 {
   "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint", "react"],
+  "plugins": [
+    "@typescript-eslint",
+    "react"
+  ],
   "extends": [
     "eslint:recommended",
     "plugin:react/recommended",
     "plugin:@typescript-eslint/recommended",
-    "plugin:@typescript-eslint/recommended-requiring-type-checking"
+    "plugin:@typescript-eslint/recommended-requiring-type-checking",
+    "plugin:storybook/recommended",
+    "plugin:storybook/recommended"
   ],
   "settings": {
-    "react": { "version": "detect" }
+    "react": {
+      "version": "detect"
+    }
   },
   "overrides": [
     {
-      "files": ["*.js", "*.jsx"]
+      "files": [
+        "*.js",
+        "*.jsx"
+      ]
     }
   ]
 }
