--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.2",
     "papaparse": "^4.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
