--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-storybook": "^0.12.0",
     "husky": "^9.1.7",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-transform-stub": "^2.0.0",
@@ -51,6 +52,11 @@
     "typescript": "^5.8.3",
     "vite": "^6.3.5",
     "vitest": "^3.1.4"
+  },
+  "resolutions": {
+    "string-width": "4.2.3",
+    "strip-ansi": "6.0.1",
+    "wrap-ansi": "6.2.0"
   },
   "browserslist": [
     ">0.2%",
